# vantage

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TEAM.md  future.md  pyproject.toml  run.py  test_routing_optimizer.py
dashboard/: country_service_improvement_heatmap.csv  country_service_improvement_heatmap.json  data.json  index.html  service_compare.json  service_compare_analysis.json  service_compare_percentages.json  service_data.json
docs/: LP_MILP_汇报.md  architect_report.md  flow_level_generator.md  reality_check_report.md  traffic_and_ground_delay.md
figures/: architecture.mmd  baseline_flow.md  baseline_flow.mmd  vantage_flow.md  vantage_flow.mmd
refine-logs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  EXPERIMENT_PLAN.md  EXPERIMENT_TRACKER.md  FINAL_PROPOSAL.md  IMPLEMENTATION_PLAN.md  PIPELINE_SUMMARY.md  REFINEMENT_REPORT.md  REVIEW_SUMMARY.md
scripts/: rebuild_gs_dataset.py
src/vantage/: engine_feedback.py  forward.py  forward_routing.py  main.py  main_routing.py  main_service.py  probe.py
tests/: conftest.py
tests/integration/: test_e2e_pipeline.py  test_routing_comparison.py  test_starperf_comparison.py
tests/unit/: test_access.py  test_capacity.py  test_cell.py  test_constellation.py  test_controllers.py  test_fib.py  test_fib_builder.py  test_first_hop.py  test_forward.py  test_forward_ground_knowledge.py  test_forward_routing.py  test_ground.py  test_metrics.py  test_policy_utils.py  test_routing.py  test_satellite_segment.py  test_topology.py  test_traffic.py  test_utils.py  (+1 more)
tools/: compare_refactor_behavior.py  compare_run_output.py
(+123 files in other folders)
